nodeqlikmashup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeqlikmashup-service
spec:
  type: ClusterIP
  ports:
    - port: 8075
      targetPort: 8075
      protocol: TCP
      name: nodeqlikmashup-service
  selector:
    app: nodeqlikmashup
